[package]
name = "excel_filter"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_excel_writer="0.1.4"
calamine = "0.18.0"
clap = "3.1"
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"